--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "writer-studio"
-version = "0.1.2"
+version = "0.1.3"
 description = "Writer Studio is a platform for writing and editing documents."
 readme = "README.md"
 requires-python = ">=3.13"
@@ -26,6 +26,7 @@ dependencies = [
     "starlette==0.40.0",
     "typing-extensions==4.15.0",
     "python-multipart==0.0.9",
+    "sqlite-vec==0.1.6",
 ]
 
 [project.optional-dependencies]
